src/test/deca/syntax/invalid/readInt_variable.synt
readInt_variable.deca:11: